# medical-billing-error-detection

./: .gitignore  METRICS.md  README.md  pyproject.toml  style.md
scripts/: calculate_encounter_total_quantiles.py  check_real_synth.ipynb  classify_kff_docs.py  fetch_article_links.py  plot_category_dispute_accuracy.py  plot_category_item_f1_heatmap.py  plot_v1_eval_metrics.py  quarantine_flagged_artifacts.py  render_sample_eval_prompts.py  repair_demographic_plausibility.py  rewrite_v31_deprecated_categories.py  screen_inpatient_mismatch_plausibility.py
scripts/_deprecated/: __init__.py  generate_gold_bills.py  perturb_gold_bills.py  run_evals.py  sample_cms_billcode_clusters.py
src/claim/: __init__.py  cli_logging.py  dataset_crypto.py  gold_bill_support.py  gold_bill_trilliant.py  inpatient_anchor.py  normalization.py
src/claim/datagen/: __init__.py  clean.py  cluster.py  constants.py  contracts.py  io.py  llm.py  perturbed.py  pipeline.py  pricing.py  (+5 more)
tests/: test_classify_kff_docs.py  test_cli_logging.py  test_datagen_clean.py  test_datagen_encounters.py  test_datagen_io.py  test_datagen_llm.py  test_datagen_perturbed.py  test_datagen_pipeline.py  test_datagen_pricing.py  test_dataset_crypto.py  test_fetch_article_links.py  test_gold_bill_trilliant.py  test_plot_category_dispute_accuracy.py  test_repair_demographic_plausibility.py  test_rewrite_v31_deprecated_categories.py  test_run_evals.py  test_screen_clinical_plausibility.py
tests_deprecated/: README.md  test_generate_gold_bills.py  test_perturb_gold_bills.py  test_sample_cms_billcode_clusters.py
(+37 files in other folders)
