[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claim"
version = "0.1.0"
description = "Utilities for evaluating models on medical billing errors."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckdb>=1.5.0",
    "openai>=1.66.0",
    "pymupdf>=1.25.3",
    "pypdf>=5.3.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tqdm>=4.67.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
